--- a/register.component.html
+++ b/register.component.html
@@ -18,7 +18,7 @@
           <div class="input-field col s12" style="padding-top:6px">
             <!-- <i class="mdi-social-person-outline prefix 아이콘  "></i> -->
             <i class="material-icons prefix">account_circle</i>
-            <input type="text" id="userid" [(ngModel)]="userid" name="userid" minlength="5" placeholder="아이디">
+            <input type="text" id="userid" [(ngModel)]="userid" name="userid" placeholder="아이디">
           </div>
         </div>
 
@@ -27,7 +27,7 @@
           <div class="input-field col s12" style="padding-top:6px">
             <!-- <i class="mdi-social-person-outline prefix 아이콘  "></i> -->
             <i class="material-icons prefix">account_circle</i>
-            <input type="text" id="username" [(ngModel)]="username" name="username" minlength="2" placeholder="이름">
+            <input type="text" id="username" [(ngModel)]="username" name="username"  placeholder="이름">
           </div>
         </div>
 
@@ -36,7 +36,7 @@
           <div class="input-field col s12" style="padding-top:6px">
             <!-- <i class="mdi-social-person-outline prefix 아이콘"></i> -->
             <i class="material-icons prefix">email</i>
-            <input type="text" id="email" [(ngModel)]="email" name="email" style="cursor: auto;" placeholder="이메일">
+            <input type="text" id="email" [(ngModel)]="email" name="email" placeholder="이메일">
           </div>
         </div>
 
@@ -45,7 +45,7 @@
           <div class="input-field col s12" style="padding-top:6px">
             <!-- <i class="mdi-social-person-outline prefix 아이콘  "></i> -->
             <i class="material-icons prefix">phone</i>
-            <input type="text" id="phone" [(ngModel)]="phone" name="phone" minlength="11"placeholder="핸드폰번호">
+            <input type="text" id="phone" [(ngModel)]="phone" name="phone" placeholder="핸드폰번호">
           </div>
         </div>
 
@@ -55,7 +55,7 @@
             <!-- <i class="mdi-social-person-outline prefix 아이콘  "></i> -->
             <i class="material-icons prefix">vpn_key</i>
             <input type="password" id="password" [(ngModel)]="password" name="password" 
-            minlength="7" placeholder="비밀번호">
+            placeholder="비밀번호">
           </div>
         </div>
 
